# dumux-microfluidics

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  config.h.cmake  dumux-microfluidic.pc.in  dune.module
appl/: CMakeLists.txt
appl/tilting-chip/: CMakeLists.txt  big-extruded.msh  channel.hh  intersections.hh  main.cc  motionfunction.hh  params.py  params_big_reservoir.input  params_small_reservoir.input  plot_flow.py  plot_lowre_wss_3d.py  plot_motion_angles.py  plot_validation.py  plot_validation_water.py  plot_validation_water_new.py  plot_wss.py  plot_wss_3d.py  rectangular_resistance.py  reservoir.hh  rotation.hh  run_lowre_cases.py  run_validation.py  run_wss_cases.py  small-extruded.msh  volume.hh
appl/wss-channel-3d/: params.input  problem.hh
appl/wss-channel-3d-membrane/: CMakeLists.txt  main.cc  params.input  problem.hh  properties.hh  solver.hh
appl/wss-cross-section/: CMakeLists.txt  README.md  create_geo.py  params.input  properties.hh
cmake/modules/: CMakeLists.txt
data/: params_chip.md
data/flow/: 8rpm_300ul_t19_cellmedia.csv
data/flow_cellmedia/: 3rpm_300ul_t19_cellmedia.csv  5rpm_300ul_t19_cellmedia.csv
data/flow_water/: data_water_speed.csv
doc/channelflow/: Makefile  (+2 more)
results/: output_03.txt  output_03B.txt  output_03C.txt  output_04.txt  output_05.txt  plot_flow.py
scripts/: gyroscope.csv  plot_tilting_angles.py  rectangular_resistance.py
test/: CMakeLists.txt  rectangular_resistance.py
visualization/: channel.geo  channel.vtk  process_mesh.py  render_result.py  render_result_both.py  render_tilt.py  synth_half_outer.geo
(+19 files in other folders)
